# buddhabrot-cl

./: CMakeLists.txt  README.md  main.cpp
kernels/: renderer.cl
